--- a/openstack_controller/templates/child_objects/metering.yaml
+++ b/openstack_controller/templates/child_objects/metering.yaml
@@ -1,4 +1,66 @@
 ceilometer:
+  DaemonSet:
+    ceilometer-compute:
+      hash_fields: []
+      images:
+      - ceilometer_compute
+      manifest: daemonset_compute
+      pod_labels:
+        application: ceilometer
+        component: compute
+      selector:
+        application__in:
+        - ceilometer
+        component__in:
+        - compute
+      type: dynamic
+    ceilometer-ipmi:
+      hash_fields: []
+      images:
+      - ceilometer_ipmi
+      manifest: daemonset_ipmi
+      pod_labels:
+        application: ceilometer
+        component: ipmi
+      selector:
+        application__in:
+        - ceilometer
+        component__in:
+        - compute
+      type: dynamic
+  Deployment:
+    ceilometer-api:
+      hash_fields: []
+      images:
+      - ceilometer_api
+      manifest: deployment_api
+      pod_labels:
+        application: ceilometer
+        component: api
+    ceilometer-central:
+      hash_fields: []
+      images:
+      - ceilometer_central
+      manifest: deployment_central
+      pod_labels:
+        application: ceilometer
+        component: central
+    ceilometer-collector:
+      hash_fields: []
+      images:
+      - ceilometer_collector
+      manifest: deployment_collector
+      pod_labels:
+        application: ceilometer
+        component: collector
+    ceilometer-notification:
+      hash_fields: []
+      images:
+      - ceilometer_notification
+      manifest: deployment_notification
+      pod_labels:
+        application: ceilometer
+        component: notification
   Job:
     ceilometer-bootstrap:
       hash_fields:
@@ -7,37 +69,58 @@ ceilometer:
       images:
       - bootstrap
       manifest: job_bootstrap
+      pod_labels:
+        application: ceilometer
+        component: bootstrap
     ceilometer-db-drop:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - db_drop
       manifest: job_db_drop
+      pod_labels:
+        application: ceilometer
+        component: db-drop
     ceilometer-db-init:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - db_init
       manifest: job_db_init
+      pod_labels:
+        application: ceilometer
+        component: db-init
     ceilometer-db-sync:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - ceilometer_db_sync
       manifest: job_db_sync
+      pod_labels:
+        application: ceilometer
+        component: db-sync
     ceilometer-ks-endpoints:
       hash_fields: []
       images:
       - ks_endpoints
       manifest: job_ks_endpoints
+      pod_labels:
+        application: ceilometer
+        component: ks-endpoints
     ceilometer-ks-service:
       hash_fields: []
       images:
       - ks_service
       manifest: job_ks_service
+      pod_labels:
+        application: ceilometer
+        component: ks-service
     ceilometer-ks-user:
       hash_fields:
       - endpoints.*
       images:
       - ks_user
       manifest: job_ks_user
+      pod_labels:
+        application: ceilometer
+        component: ks-user
