Add more items to object-storage child object
Adding absent items which create pods

Related-Prod: PRODX-34784
Change-Id: I19ef6359890d9e2123b56d5f53bc57a089e24b12

--- a/openstack_controller/templates/child_objects/object-storage.yaml
+++ b/openstack_controller/templates/child_objects/object-storage.yaml
@@ -6,11 +6,17 @@ ceph-rgw:
       images:
       - ks_endpoints
       manifest: job_ks_endpoints
+      pod_labels:
+        application: ceph
+        component: ks-endpoints
     ceph-ks-service:
       hash_fields: []
       images:
       - ks_service
       manifest: job_ks_service
+      pod_labels:
+        application: ceph
+        component: ks-service
     ceph-rgw-ks-user:
       hash_fields:
       - endpoints.*
