Add network policies for ingress
Related-Prod: PRODX-34781
Change-Id: Id3ef2d715145a9930966ac3a6947577bffb97dd3

--- a/openstack_controller/templates/services/ingress.yaml
+++ b/openstack_controller/templates/services/ingress.yaml
@@ -58,7 +58,7 @@ spec:
                   initialDelaySeconds: 10
                   timeoutSeconds: 5
       manifests:
-        network_policy: false
+        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
 {%- if is_tls_proxy_enabled %}
         tls_proxy: true
 {%- endif %}
@@ -82,4 +82,8 @@ spec:
           port:
             proxy:
               default: 443
+{%- endif %}
+{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+      network_policy:
+{% include 'base/network_policies/ingress.yaml' %}
 {%- endif %}
