Do not add placement child objects for compute after stein
Change-Id: I0b404526db75af7f82bced8c93c8f18756ea455d
Related-Prod: PRODX-35161

--- a/openstack_controller/templates/child_objects/compute.yaml
+++ b/openstack_controller/templates/child_objects/compute.yaml
@@ -65,7 +65,7 @@ nova:
       images:
       - ks_user
       manifest: job_ks_user
-{%- if spec.openstack_version not in ['queens', 'rocky'] %}
+{%- if spec.openstack_version in ['queens', 'rocky', 'stein'] %}
     placement-ks-endpoints:
       images:
       - ks_endpoints
