--- a/tests/fixtures/render_service_template/output/coordination/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/coordination/ussuri_ceph_local_non_dvr.yaml
@@ -13,6 +13,7 @@ spec:
           image_repo_sync: image-repo-sync:latest
       manifests:
         cron_job_db_compact: true
+        network_policy: false
       pod:
         replicas:
           etcd: 3
