--- a/openstack_controller/templates/services/coordination.yaml
+++ b/openstack_controller/templates/services/coordination.yaml
@@ -19,6 +19,11 @@ spec:
 {%- endfor %}
       manifests:
         cron_job_db_compact: true
+        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
+{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+      network_policy:
+{% include 'base/network_policies/coordination.yaml' %}
+{%- endif %}
       endpoints:
         cluster_domain_suffix: {{ spec.internal_domain_name }}
       pod:
