--- a/tests/fixtures/render_service_template/output/coordination/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/coordination/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -13,6 +13,22 @@ spec:
           image_repo_sync: image-repo-sync:latest
       manifests:
         cron_job_db_compact: true
+        network_policy: true
+      network_policy:
+        server:
+          spec:
+            ingress:
+              - from:
+                 - default: selector
+              - from:
+                 - ipBlock:
+                     cidr: 192.168.0.0/16
+            podSelector:
+              matchLabels:
+                application: etcd
+                component: server
+            policyTypes:
+            - Ingress
       pod:
         replicas:
           etcd: 3
